[package]
name = "yaml_cv_rs"
version = "0.1.0"
authors = ["rezbyte"]
edition = "2021"
description = "A rust port of kaityo256's yaml_cv."
repository = "https://github.com/rezbyte/yaml_cv_rs"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.13"
printpdf = { version = "0.5.3", features = ["embedded_images"] }
anyhow = "1.0.65"
